cmake_minimum_required(VERSION 2.6)

project(auto_ptr)
find_package(Boost REQUIRED COMPONENTS thread filesystem system signals)
if (Boost_VERSION GREATER 105300)
	message(STATUS "boost >= 1.54.0")
else(Boost_VERSION GREATER 105300)
	message(STATUS "boost < 1.54.0")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DHYDRO")
endif()
add_executable(auto_ptr auto_ptr.cpp)
target_link_libraries(auto_ptr )
add_executable(shared_ptr share_ptr.cpp)
target_link_libraries(shared_ptr ${Boost_LIBRARIES})
